wip: improve layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- CSS bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+  <script src="js/script.js" defer></script>
 </head>
 <body>
   <div class="header-logos">
@@ -17,21 +17,36 @@
       <img src="images/logo-sptrans.png" alt="logo-sptrans">
     </div>
     <div>
-      <img src="images/sptrans-75-anos.png" alt="sptrans-75-anos">
+      <img src="images/logo-smt.png" alt="sptrans-75-anos">
     </div>
   </div>
 
   <nav class="nav-menu bars">
-    <ul>
-      <a href="">teste</a>
-      <a href="">teste</a>
-      <a href="">teste</a>
-      <a href="">teste</a>
-    </ul>
+    <div class="menu-header">
+      <div hamburger class="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="serch-bar">
+        <p>Busca no site</p>
+      </div>
+    </div>
+
+    <div class="drop">
+      <ul menu-drop class="toggle-menu">
+        <a href="">sptrans</a>
+        <a href="">bilhete único</a>
+        <a href="">terminais, corredores e pontos de parada</a>
+        <a href="">atende +</a>
+        <a href="">fale conosco</a>
+      </ul>
+    </div>
+
   </nav>
 
-  <section class="banner">
-  </section>
+  <div class="banner">
+  </div>
 
   <section class="bu-section">
     <div class="logo">
@@ -119,18 +134,30 @@
     </div>
   </section>
 
-  <footer class="footer">
+  <footer class="footer-1">
     <div class="social-media">
+      <div class="circle">
+        <img src="" alt="">
+      </div>
+      <div class="circle">
+        <img src="" alt="">
+      </div>
+      <div class="circle">
+        <img src="" alt="">
+      </div>
+    </div>
+  </footer>
 
+  <footer class="footer-2">
+    <div class="footer-logos">
+      <img src="images/sptrans-75-anos.png" alt="">
+      <img src="images/logo-smt.png" alt="">
     </div>
     <div class="footer-information">
       <p>São Paulo Transporte S/A</p>
       <p>Rua Boa Vista, 236 - Centro - São Paulo/SP</p>
       <p>CEP: 01014-000</p>
       <p>Telefone: 156</p>
-    </div>
-    <div class="footer-logos">
-
     </div>
   </footer>
 
