--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </footer>
 
   <!-- Chat fuel -->
-  <script>
+  <!-- <script>
     var div = document.createElement('div');
     div.className = 'fb-customerchat';
     div.setAttribute('page_id', '295134121371749');
@@ -190,6 +190,10 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     }, 0);
-  </script>
+  </script> -->
+
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5991549.js"></script>
+<!-- End of HubSpot Embed Code -->
 </body>
 </html>
