--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
     </div>
   </footer>
 
+  <div class="chat-balloon">
+    <div><span>Olá sou o chat bot da <b>SPTrans!</b></span> <span>Estou aqui para ajudar.</span></div>
+  </div>
   <!-- Chat fuel -->
   <!-- <script>
     var div = document.createElement('div');
